# Dev-Team

./: .env.example  .gitignore  README.md  Start Dev Team.bat  Stop Dev Team.bat  docker-compose.yml
backend/: Dockerfile  pyproject.toml  smoke_coder.py  smoke_dispatcher.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  api_runner.py  base.py  claude_code_runner.py  coder.py  reviewer.py
backend/app/api/: __init__.py  projects.py  session.py  websocket.py
backend/app/orchestrator/: __init__.py  agent_event_buffer.py  execution_loop.py  job_registry.py  orchestrator.py  phases.py  scheduler.py  task_runner.py
backend/app/prompts/: __init__.py  library.py
backend/app/sandbox/: __init__.py  executor.py  fs.py
backend/app/state/: __init__.py  store.py
backend/app/tools/: __init__.py  architect_tools.py  coder_tools.py  dispatcher_tools.py  reviewer_tools.py
backend/tests/: test_agent_event_buffer.py  test_agent_event_routing.py  test_basics.py  test_claude_code_runner.py  test_coder.py  test_dispatcher.py  test_e2e_dispatcher.py  test_execution_loop.py  test_force_submit_plan.py  test_job_registry.py  test_model_overrides.py  test_platform_prompts.py  test_playwright_integration.py  test_project_update_api.py  test_read_task.py  test_recovery.py  test_resume_phases.py  test_retry_dispatcher.py  test_reviewer_tools.py  test_sandbox.py  test_scheduler.py  test_task_edit_api.py  test_task_review_api.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PROMPTS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  (+3 more)
(+24 files in other folders)
